<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_attachment"
            android:checked="true"
            android:icon="@drawable/ic_attachment"
            android:title="@string/nav_item_attach"/>
        <item
            android:id="@+id/nav_item_images"
            android:checked="true"
            android:icon="@drawable/ic_images"
            android:title="@string/nav_item_images"/>
        <item
            android:id="@+id/nav_item_location"
            android:checked="true"
            android:icon="@drawable/ic_location"
            android:title="@string/nav_item_location"/>
    </group>
    <item android:title="@string/nav_sub_menu">
        <menu>
            <item
                android:title="@string/nav_sub_menu_item01"
                android:icon="@android:drawable/btn_plus" />
            <item
                android:title="@string/nav_sub_menu_item02"
                android:icon="@android:drawable/btn_plus"/>
        </menu>
    </item>
</menu>